<resources>
    <string name="app_name">Tribune-app</string>
    <string name="enter_login">Enter login</string>
    <string name="enter_password">Enter password</string>
    <string name="registration">registration</string>
    <string name="repeat_password">Repeat password</string>
    <string name="invalid_password">Password is incorrect</string>
    <string name="please_wait">Please wait....</string>
    <string name="authentication">Authentication</string>
    <string name="success">Success</string>
    <string name="authentication_failed">Authentication failed</string>
    <string name="different_passwords">Passwords aren\'t the same</string>
    <string name="signup">Registration</string>
    <string name="registration_failed">Registration failed</string>
    <string name="downloading_posts">Downloading posts</string>
    <string name="error_occured">Error occurred</string>
    <string name="like_in_progress">Like is performing</string>
    <string name="dislike_in_progress">Dislike is performing</string>
    <string name="open_link_in_progress">Open link is performing</string>
    <string name="already_voted">You can vote only once!</string>
    <string name="create">Create</string>
    <string name="enter_your_post_content">Enter post content</string>
    <string name="create_new_post">Create new post</string>
    <string name="add_link_to_post_content">Add a link to your post</string>
    <string name="post_created_successfully">Post created successfully</string>
    <string name="empty_attachment">Please attach the image</string>
    <string name="empty_content">Please add text to your post</string>
    <string name="dowloading_voted_list">Downloading voted list</string>
    <string name="profile">Profile information</string>
    <string name="update">UPDATE</string>
    <string name="user_info_updated">avatar updated</string>
    <string name="load_more_posts">More posts</string>
    <string name="upload_error">Cannot upload image</string>
    <string name="current_user_error">Error with current user request</string>
    <string name="author_name">author name</string>
    <string name="badge">badge</string>
    <string name="less_minute">less than minute ago</string>
    <string name="year_ago">year ago</string>
    <string name="few_months">few months ago</string>
    <string name="more_year_ago">more year ago</string>
    <string name="notification_channel_name">react notification</string>
    <string name="notification_channel_description">someone\'s react on your post</string>
    <string name="google_play_unavailable">google play is unavailable</string>
    <string name="push_token_error">Register Push token error</string>
    <string name="dowloading_post_error">Error while downloading posts</string>
    <string name="like_process_error">error during voting the post</string>
    <string name="load_more_error">Cannot load more posts. Please try again</string>
    <string name="image_loading_error">Image loading error</string>
    <string name="profile_error">User profile page error</string>
    <string name="voted_activity_error">Voted post activity downloading failed</string>
    <string name="empty">List of posts is empty</string>
    <string name="retry">Please retry</string>
    <string name="create_post_error">create post error</string>

    <plurals name="minutes_plurals">
        <item quantity="one">минуту назад</item>
        <item quantity="few">минуты назад</item>
        <item quantity="other">минут назад</item>
    </plurals>

    <plurals name="hours_plurals">
        <item quantity="one">час назад</item>
        <item quantity="few">часа назад</item>
        <item quantity="other">часов назад</item>
    </plurals>

    <plurals name="months_plurals">
        <item quantity="one">месяц назад</item>
        <item quantity="few">месяца назад</item>
        <item quantity="other">месяцев назад</item>
    </plurals>
    <plurals name="days_plurals">
        <item quantity="one">один день назад</item>
        <item quantity="other">несколько дней назад</item>
    </plurals>
</resources>
