<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/createNewPostLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/create_new_post"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/contentTil"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:hint="@string/enter_your_post_content"
        app:layout_constraintTop_toBottomOf="@id/createNewPostLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/contentLinkTil"
        app:layout_constraintHeight_min="250dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/contentEdt"
            android:inputType="textMultiLine"
            android:padding="8dp"
            android:gravity="start|top"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/contentLinkTil"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:hint="@string/add_link_to_post_content"
        app:layout_constraintTop_toBottomOf="@id/contentTil"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/createPostBtn"
        app:layout_constraintHeight_min="250dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/linkURLEdt"
            android:inputType="textMultiLine"
            android:padding="8dp"
            android:gravity="start|top"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/attachImg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:foreground="?android:attr/selectableItemBackground"
        android:padding="8dp"
        android:src="@drawable/ic_add_a_photo"
        app:layout_constraintBottom_toTopOf="@id/createPostBtn"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/attachPhotoDoneImg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:padding="8dp"
        android:src="@drawable/ic_done"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@id/createPostBtn"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/createPostBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/create"/>

</androidx.constraintlayout.widget.ConstraintLayout>